trying to fix shift

--- a/assets/styles.css
+++ b/assets/styles.css
@@ -2245,7 +2245,6 @@ figcaption {
     width: 100%;
     max-width: 100vw;
     height: auto;
-    min-height: 1vh;
   }
 
   .feature-box img {
@@ -2269,6 +2268,14 @@ figcaption {
     margin: 0 auto;
     width: 100%;
     max-width: 100vw;
+    height: auto;
+  }
+
+  .categories-title h2,
+  .feature-title h2 {
+    width: 100%;
+    max-width: 100vw;
+    min-height: 1vh;
     height: auto;
   }
 
@@ -2298,6 +2305,7 @@ figcaption {
   .hero-img img {
     width: 100%;
     height: 100%;
+    min-height: 2vh;
     object-fit: cover;
     display: block;
   }
@@ -2407,6 +2415,7 @@ figcaption {
   .hero-img img {
     width: 100%;
     height: 100%;
+    min-height: 2vh;
     object-fit: cover;
     display: block;
   }
